# zenoh-pico-nuttx

./: CMakeLists.txt  library.json
examples/nuttx/: CMakeLists.txt  Kconfig  Make.defs  Makefile  zenoh-test.c
include/zenoh-pico/: config.h
include/zenoh-pico/system/common/: platform.h
include/zenoh-pico/system/platform/: nuttx.h
nuttx/: CMakeLists.txt  Kconfig  Make.defs  Makefile
src/system/nuttx/: network .c  network.c  system.c
